Closed
Bug 456008
Opened 17 years ago
Closed 17 years ago
[FIX]Dynamically loaded flash does not render in XHTML.
Categories
(Core :: XML, defect, P3)
Core
XML
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b1
People
(Reporter: Michiel.Meeuwissen, Assigned: bzbarsky)
References
()
Details
(4 keywords)
Attachments
(1 file)
|
9.47 KB,
patch
|
jst
:
review+
jst
:
superreview+
dveditz
:
approval1.9.0.4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.1) Gecko/2008072820 Firefox/3.0.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.1) Gecko/2008072820 Firefox/3.0.1
This XHTML page does not render the flash object that is loaded with ajax into the page. (using jquery). Other elements, like text, style, and an image are rendered correctly.
If you try to render the included piece of xhtml directly (http://www.meeuw.org/flash/flash.xhtml), then it _is rendered_.
Reproducible: Always
Steps to Reproduce:
1.Goto http://www.meeuw.org/flash/
2.See that there is no flash animation to be seen
3.In firebug you see that the <object> _is_ in the page
Actual Results:
The flash object does not appear.
Expected Results:
The page http://www.meeuw.org/flash/flash.xhtml should have been visible entirely, including the flash movie.
Tested also with a nightly build 3.1bpre
Does work in FF2.
Does also work in opera 9.5.
Comment 1•17 years ago
|
||
Confirmed on Windows XP/Vista.
Works: 2008041712
Fails: 2008041717
Regression window is:
http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=2008-04-17+11%3A00&maxdate=2008-04-17+18%3A00
Apperas to be caused by Bug 419716.
Blocks: 419716
Status: UNCONFIRMED → NEW
Component: General → XML
Ever confirmed: true
Keywords: regression,
testcase
OS: Linux → All
Product: Firefox → Core
QA Contact: general → xml
Hardware: PC → All
Version: unspecified → Trunk
Updated•17 years ago
|
Flags: blocking1.9.1?
Does it work if you reverse the order of the attributes in the <object> tag?
It's very unfortunate, but flash does depend on that order. We've been juggling it quite a bit and I'm not sure what we finally landed on.
| Assignee | ||
Comment 3•17 years ago
|
||
Yeah, but this works in HTML, no? I really wonder what jquery is doing here and whether it's possible to create a smallish testcase with just the relevant part of jquery. That would help immensely.
| Reporter | ||
Comment 4•17 years ago
|
||
The order of comments of the attributes does not seem to matter. In the cited demo I now have 6 times the same flash movie, only with different order of attributes. (Happily) that does not make a difference, and they all don't work.
It does work in HTML. See:
http://www.meeuw.org/flash/html.html
This is a symlink to index.xhtml, where the differnent extension makes apache serves it out as text/html.
I'll do my best to reduce the test-case and eliminate jquery.
| Assignee | ||
Comment 5•17 years ago
|
||
I bet the problem is that the HTML fragment sink passes PR_FALSE for aFromParser whilete XML fragment sink passes PR_TRUE and never calls DoneCreatingElement or such. The XML fragment sink needs fixing here, and we should fix this on branch as well, since it's a regression there too...
Flags: blocking1.9.0.3?
| Assignee | ||
Comment 6•17 years ago
|
||
This problem should be noticeable with other nodes that rely on DoneCreatingElement or DoneAddingChildren as well, I would think, for ease of test-writing.
| Reporter | ||
Comment 7•17 years ago
|
||
Ok. I removed jquery from the test. I include the included page now twice, in two different manners. First using innerHTML = res.responseText, and the second time using responseXML and appendChild. The second method _does_ work.
That may throw some light on the issue.
| Assignee | ||
Comment 9•17 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #340062 -
Flags: superreview?(jst)
Attachment #340062 -
Flags: review?(jst)
| Assignee | ||
Updated•17 years ago
|
Summary: Dynamically loaded flash does not render in XHTML. → [FIX]Dynamically loaded flash does not render in XHTML.
Updated•17 years ago
|
Attachment #340062 -
Flags: superreview?(jst)
Attachment #340062 -
Flags: superreview+
Attachment #340062 -
Flags: review?(jst)
Attachment #340062 -
Flags: review+
Updated•17 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P3
| Assignee | ||
Updated•17 years ago
|
Attachment #340062 -
Flags: approval1.9.0.4?
| Assignee | ||
Comment 10•17 years ago
|
||
Comment on attachment 340062 [details] [diff] [review]
Fix + tests
We should fix this on branch too.
| Assignee | ||
Comment 11•17 years ago
|
||
Pushed changeset cd35d2072d63. Michiel, thanks for the excellent testcase and the help getting to the bottom of this!
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Flags: blocking1.9.0.4? → blocking1.9.0.4+
Comment 12•17 years ago
|
||
Comment on attachment 340062 [details] [diff] [review]
Fix + tests
Approved for 1.9.0.4, a=dveditz for release-drivers
Attachment #340062 -
Flags: approval1.9.0.4? → approval1.9.0.4+
Comment 14•17 years ago
|
||
Verified for 1.9.0.4 with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.4pre) Gecko/2008102304 GranParadiso/3.0.4pre.
Verified for trunk with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b2pre) Gecko/20081023 Minefield/3.1b2pre.
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.0.4 → verified1.9.0.4
| Assignee | ||
Updated•17 years ago
|
Keywords: fixed1.9.1
Target Milestone: --- → mozilla1.9.1b1
Updated•17 years ago
|
Keywords: verified1.9.1
Updated•17 years ago
|
Keywords: fixed1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•