Bug 456008.  Make sure to not claim nodes are created via parser in the XML fragment sink, just like the HTML fragment sink doesn't claim it.  r+sr=jst